# nxv

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  install.sh  release-plz.toml
.aethon/: mcp.toml
.agents/skills/nxv/: SKILL.md
.agents/skills/nxv-design/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  thumbnail.html
.agents/skills/nxv-design/components/core/: Button.d.ts  Button.jsx  Callout.d.ts  Callout.jsx  Chip.d.ts  CommandPalette.jsx  Kbd.d.ts  Metric.prompt.md  Pagination.d.ts  Panel.d.ts  Panel.jsx  SegmentedToggle.d.ts  SegmentedToggle.prompt.md  StatusPill.d.ts  StatusPill.jsx  StatusPill.prompt.md  Toast.prompt.md  core.card.html
.agents/skills/nxv-design/components/product/: ActivityBars.d.ts  ActivityBars.jsx  ActivityBars.prompt.md  PackageCard.d.ts  PackageCard.prompt.md  SearchPrompt.prompt.md  Terminal.jsx  VersionBadge.d.ts  VersionBadge.jsx
.agents/skills/nxv-design/guidelines/: brand-effects.html  color-fog.html  color-ink.html  color-nix.html  radius-scale.html  spacing-scale.html  type-mono.html
.agents/skills/nxv-design/templates/search-page/: SearchPage.dc.html
.agents/skills/nxv-design/tokens/: effects.css  radius.css  spacing.css  typography.css
.agents/skills/nxv-design/ui_kits/search-app/: README.md  index.html
.agents/skills/source-command-release/: SKILL.md
.claude/commands/: release.md
.claude/skills/nxv/: SKILL.md
.claude/skills/nxv-design/: Landing.html  README.md  _ds_manifest.json  styles.css
.claude/skills/nxv-design/components/core/: Button.prompt.md  Callout.prompt.md  Chip.jsx  Chip.prompt.md  CommandPalette.d.ts  CommandPalette.prompt.md  Kbd.jsx  Kbd.prompt.md  Metric.d.ts  Metric.jsx  Pagination.jsx  Pagination.prompt.md  Panel.prompt.md  SegmentedToggle.jsx  Toast.d.ts  Toast.jsx
.claude/skills/nxv-design/components/product/: PackageCard.jsx  PackageRow.d.ts  PackageRow.jsx  PackageRow.prompt.md  SearchPrompt.d.ts  SearchPrompt.jsx  Terminal.d.ts  Terminal.prompt.md  VersionBadge.prompt.md  VersionTimeline.d.ts  VersionTimeline.jsx  VersionTimeline.prompt.md  product.card.html
.claude/skills/nxv-design/guidelines/: brand-logo.html  color-status.html  spacing-grid.html  type-body.html  type-display.html
.claude/skills/nxv-design/tokens/: colors.css  fonts.css
.claude/skills/nxv-design/ui_kits/docs-site/: README.md  index.html
.github/workflows/: flakehub-publish-tagged.yml  pages.yml  publish-index.yml  release-plz.yml
benches/: bloom_benchmark.rs  search_benchmark.rs
docs/: indexer_refactor_tracking.md  indexer_refactor_tracking_2026-01-22.md  indexer_refactor_tracking_2026-01.md
docs/indexer-rewrite/: ANALYSIS.md  DESIGN.md
docs/specs/: nxv-index-implementation.md
frontend/: .pa11yci.json  app.js  fonts.css  index.html  package-lock.json  package.json  tailwind.generated.css  tailwind.src.css
nix/: module.nix
scripts/: a11y_check.py
src/: backend.rs  cli.rs  client.rs  error.rs  main.rs  paths.rs  search.rs  self_update.rs
src/db/: import.rs  json_array.rs  mod.rs  queries.rs  releases.rs
src/index/: config.rs  eval.rs  extractor.rs  git.rs  mod.rs  monitor.rs  publisher.rs  releases.rs  snapshot.rs
src/index/nix/: extract.nix
src/index/worker/: pool.rs  protocol.rs  spawn.rs  watchdog.rs  worker_main.rs
src/output/: plain.rs  table.rs
src/remote/: download.rs  update.rs
src/server/: error.rs  handlers.rs  metrics.rs  mod.rs  openapi.rs  types.rs
src/skill/: SKILL.md  mod.rs
tests/: integration.rs
tests/fixtures/: regression_packages.json
website/: .prettierignore  index.md  package.json
website/.vitepress/: config.ts
website/.vitepress/theme/: index.ts  style.css
website/advanced/: indexer-cli.md  indexer.md  troubleshooting.md
website/api/: index.md
website/guide/: cli-reference.md  configuration.md  index.md  installation.md  skill.md
