[package]
name = "nxv"
version = "0.1.6"
edition = "2024"
description = "Nix Version Index"
license = "MIT"
repository = "https://github.com/utensils/nxv"
keywords = ["nix", "nixpkgs", "package", "version"]
categories = ["command-line-utilities"]
exclude = [
    "nixpkgs/",
    "publish/",
    "docs/",
    ".github/",
    ".claude/",
    "benches/",
    "*.gif",
]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Database
rusqlite = { version = "0.38", features = ["bundled", "backup"] }

# Git (dev/indexer only, feature-gated)
git2 = { version = "0.20", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for index downloads
reqwest = { version = "0.12", features = ["blocking", "rustls-tls-webpki-roots", "json"], default-features = false }

# Compression
zstd = "0.13"

# Hashing
sha2 = "0.10"

# Bloom filter
bloomfilter = "3.0"

# Manifest signature verification
minisign = "0.8"

# Output formatting
owo-colors = { version = "4.2", features = ["supports-colors"] }
comfy-table = "7.2"

# Progress indication
indicatif = "0.18"

# Signal handling
ctrlc = { version = "3.5", optional = true }

# API server
axum = "0.8"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }
tower_governor = "0.8"
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Paths
dirs = "6.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Version parsing/comparison
semver = "1.0"

# Temporary files
tempfile = "3.24"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
mockito = "1.7"
criterion = "0.5"
proptest = "1.5"
serial_test = "3.2"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "bloom_benchmark"
harness = false

[[bench]]
name = "indexer_benchmark"
harness = false

[features]
default = []
indexer = ["git2", "ctrlc"]  # Enable indexer functionality

# Release profile optimizations
[profile.release]
lto = true           # Link-time optimization for smaller binaries
codegen-units = 1    # Better optimization at cost of compile time
strip = true         # Strip symbols for smaller binaries
panic = "abort"      # Smaller binary, no unwinding

# Profile for maximum portability (use with RUSTFLAGS="-C target-feature=+crt-static" on Linux)
[profile.release-static]
inherits = "release"
# Additional notes for static linking:
# - Linux (musl): rustup target add x86_64-unknown-linux-musl && cargo build --release --target x86_64-unknown-linux-musl
# - macOS: Already mostly static due to rustls and bundled SQLite
# - Windows: Use MSVC target with /MT flag
